AC_INIT(skystreets.cpp)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(skystreets, 0.2.4)
AC_PROG_CXX
AC_CONFIG_FILES([audio/Makefile gfx/Makefile levels/Makefile])
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,:,AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
MDL_HAVE_OPENGL
CFLAGS="$CFLAGS $SDL_CFLAGS $GL_CFLAGS"
LIBS="$LIBS $SDL_LIBS $GL_LIBS"
AC_OUTPUT(Makefile)
