AC_INIT(SkyStreets, 0.2.5)
AC_CONFIG_SRCDIR([skystreets.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
AC_PROG_CXX
AC_CONFIG_FILES([audio/Makefile gfx/Makefile levels/Makefile])
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,:,AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
MDL_HAVE_OPENGL
CFLAGS="$CFLAGS $SDL_CFLAGS $GL_CFLAGS"
LIBS="$LIBS $SDL_LIBS $GL_LIBS"
AC_OUTPUT(Makefile)
